--- a/PARAHLAD METAL.html
+++ b/PARAHLAD METAL.html
@@ -24,7 +24,7 @@ font-size: medium;
     <img src="metals 1.JPG" width="20%" height="40px" style="float: right; margin-right: 100px;margin-top: 20px;">
 </div>
 <div style="background-color: whitesmoke; width: 100%; height: 100px;">
-<p style="color: #0563c2; margin-top: 30px; float: left; margin-left: 200px; font-size: 1cm;"> DIVANK METALS</p>
+<p style="color: #0563c2; margin-top: 30px; float: left; margin-left: 200px; font-size: 1cm;"> DIVANkAR METALS</p>
 <input type="search" style="width: 200px; height: 25px; float: right; margin-top: 40px; margin-right: 200px;" name="search product">
 </div>
 <div style="background-color:#0563c2; width: 100%; height: 50px;">
